name:           documentalist
version:        0.1
stability:      alpha
synopsis:       A multi-language, extensible documentation generator
description:    TODO
homepage:       https://github.com/jspahrsummers/documentalist
bug-reports:    https://github.com/jspahrsummers/documentalist/issues
category:       Documentation
author:         Justin Spahr-Summers
maintainer:     justin.spahrsummers@gmail.com
license:        MIT
license-file:   LICENSE
copyright:      Copyright (c) 2013 Justin Spahr-Summers
cabal-version:  >= 1.14
build-type:     Simple

library
  default-language:   Haskell2010
  exposed-modules:    Text.Documentalist
                      Text.Documentalist.CommentParser
                      Text.Documentalist.SourceParser
                      Text.Documentalist.SourceParser.Clang Text.Documentalist.SourceParser.Clang.Declaration
  build-depends:      base >= 4.5 && < 5,
                      containers >= 0.5,
                      mtl >= 2.1,
                      parsec >= 3.1.3
  extra-libraries:    clang
  extra-lib-dirs:     /usr/local/lib
  include-dirs:       /usr/local/include
  c-sources:          Text/Documentalist/SourceParser/Clang/FFI_wrappers.c
  other-modules:      Text.Documentalist.SourceParser.Clang.FFI
  build-tools:        hsc2hs

executable documentalist
  default-language:   Haskell2010
  build-depends:      base >= 4.5 && < 5,
                      documentalist
  main-is:            Main.hs

source-repository head
  type:     git
  location: git://github.com/jspahrsummers/documentalist.git
