name:           documentalist
version:        0.1
stability:      alpha
synopsis:       A multi-language, extensible documentation generator
description:    TODO
homepage:       https://github.com/jspahrsummers/documentalist
bug-reports:    https://github.com/jspahrsummers/documentalist/issues
category:       Documentation
author:         Justin Spahr-Summers
maintainer:     justin.spahrsummers@gmail.com
license:        MIT
license-file:   LICENSE
copyright:      Copyright (c) 2013 Justin Spahr-Summers
cabal-version:  >= 1.14
build-type:     Simple

library
  default-language:   Haskell2010
  exposed-modules:    Text.Documentalist
                      Text.Documentalist.CommentParser
                      Text.Documentalist.SourceParser
                      Text.Documentalist.SourceParser.Clang
                      Text.Documentalist.Writer
  build-depends:      base >= 4.5 && < 5,
                      containers >= 0.5,
                      mtl >= 2.1,
                      transformers >= 0.3
  other-modules:      Text.Documentalist.SourceParser.Clang.FFI
                      Text.Documentalist.SourceParser.Clang.Types
                      Text.Documentalist.SourceParser.Clang.Internal
                      Text.Documentalist.Util
  extra-libraries:    clang
  extra-lib-dirs:     /usr/lib/llvm-3.4/lib /opt/boxen/homebrew/lib /usr/local/lib
  include-dirs:       /usr/lib/llvm-3.4/include /opt/boxen/homebrew/include /usr/local/include
  cc-options:         -std=c99 -Werror
  c-sources:          Text/Documentalist/SourceParser/Clang/FFI_wrappers.c
  build-tools:        hsc2hs

executable documentalist
  default-language:   Haskell2010
  build-depends:      base >= 4.5 && < 5,
                      documentalist
  main-is:            Main.hs
  hs-source-dirs:     main

test-suite tests
  default-language:   Haskell2010
  hs-source-dirs:     Tests
  main-is:            test.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.5 && < 5,
                      documentalist,
                      test-framework,
                      test-framework-hunit,
                      HUnit
                      

source-repository head
  type:     git
  location: git://github.com/jspahrsummers/documentalist.git
