name:           documentalist
version:        0.1
stability:      alpha
synopsis:       A multi-language, extensible documentation generator
description:
  Documentalist is an extensible documentation generator that is meant to support
  multiple source languages, documentation syntaxes, and output formats.
  .
  The architecture is split into three major stages:
  .
    1. A 'SourceParser' locates documentation comments and the declarations to which they're attached.
    .
    2. A 'CommentParser' interprets declarations and comment texts according to a predefined syntax, and creates a language-independent AST.
    .
    3. A 'Writer' generates pretty output, like the final result of Doxygen or Appledoc.
 
homepage:       https://github.com/jspahrsummers/documentalist
bug-reports:    https://github.com/jspahrsummers/documentalist/issues
category:       Documentation
author:         Justin Spahr-Summers
maintainer:     justin.spahrsummers@gmail.com
license:        MIT
license-file:   LICENSE
copyright:      Copyright (c) 2013 Justin Spahr-Summers
cabal-version:  >= 1.14
build-type:     Simple

library
  default-language:   Haskell2010
  exposed-modules:    Text.Documentalist
                      Text.Documentalist.CommentParser
                      Text.Documentalist.CommentParser.TomDoc
                      Text.Documentalist.SourceParser
                      Text.Documentalist.SourceParser.Clang
                      Text.Documentalist.Types.Comment
                      Text.Documentalist.Types.DocBlock
                      Text.Documentalist.Types.Package
                      Text.Documentalist.Writer
  build-depends:      base >= 4.5 && < 5,
                      containers >= 0.5,
                      mtl >= 2.1,
                      split >= 0.2,
                      transformers >= 0.3
  other-modules:      Text.Documentalist.SourceParser.Clang.FFI
                      Text.Documentalist.SourceParser.Clang.Types
                      Text.Documentalist.SourceParser.Clang.Internal
                      Text.Documentalist.Util
  extra-libraries:    clang
  extra-lib-dirs:     /opt/boxen/homebrew/opt/llvm/lib /usr/local/opt/llvm/lib /usr/local/lib
  include-dirs:       /opt/boxen/homebrew/opt/llvm/include /usr/local/opt/llvm/include /usr/local/include
  cc-options:         -std=c99 -Werror
  ghc-options:        -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing
  c-sources:          Text/Documentalist/SourceParser/Clang/FFI_wrappers.c
  build-tools:        hsc2hs

executable documentalist
  default-language:   Haskell2010
  build-depends:      base >= 4.5 && < 5,
                      documentalist
  main-is:            Main.hs
  hs-source-dirs:     Main

test-suite tests
  default-language:   Haskell2010
  hs-source-dirs:     Tests
  main-is:            test.hs
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.5 && < 5,
                      documentalist,
                      test-framework,
                      test-framework-hunit,
                      HUnit
                      

source-repository head
  type:     git
  location: git://github.com/jspahrsummers/documentalist.git
